# data_analysis_lab

./: .dockerignore  .gitignore  PROJECT_INFO.md  README.md  main.py  pyproject.toml
data/: cleaning_config.json
data/parquet/: test_events.parquet
docker/: Dockerfile  docker-compose.yml
docs/: DATA.md  EDA.md  MODEL_V2.md  MODEL_V2_ABC.md  MODEL_V2_CLUSTER.md  MODEL_V2_MORE.md  PLAN.md
docs/superpowers/specs/: 2026-05-26-v2-cluster-in-ui-design.md
src/: bench_abc.py  bench_cluster.py  bench_more.py  cluster_features.py  compare_abc.py  eda.py  eda_figures.py  eval_live.py  eval_live_v2.py  features_v2.py  features_v2_baseline.py  features_v2_extras.py  host_sampler.py  live_capture.py  live_capture_v2.py  monitor.py  plot_abc.py  plot_cluster.py  plot_more.py  plot_results.py  plot_results_v2.py  simulator.py  synthetic.py  train.py  train_v2.py
src/api/: app.py  model_registry.py  models.py  stream_engine.py
src/api/static/: index.html
src/dashboard/: app.py
src/dashboard/.streamlit/: config.toml
src/utils/: data_cleaning.py  data_pipeline.py  extract_data.py
