[project]
name = "data-analysis-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
demo = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "redis>=5.0",
    "joblib>=1.4",
    "pydantic>=2.0",
    "rich>=13",
]
